remove not used speakerdeck from links

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,8 +27,7 @@
               <div class="view">
                   <a href="https://github.com/michalczukm" target="_blank" rel="noreferrer">GitHub</a> | 
                   <a href="https://twitter.com/michalczukm" target="_blank" rel="noreferrer">Twitter</a> | 
-                  <a href="https://stackoverflow.com/users/2029818/michalczukm" target="_blank" rel="noreferrer">StackOverflow</a> | 
-                  <a href="https://speakerdeck.com/michalczukm" target="_blank" rel="noreferrer">SpeakerDeck</a>
+                  <a href="https://stackoverflow.com/users/2029818/michalczukm" target="_blank" rel="noreferrer">StackOverflow</a>
               </div>
             </header>
             <footer class="footer-lg">
