new-version: display artifacts

--- a/new-version/src/assets/scss/main.scss
+++ b/new-version/src/assets/scss/main.scss
@@ -201,6 +201,15 @@
 
 /* Section/Article */
 
+	.two-column {
+		display: flex;
+
+		section {
+			flex-grow: 1;
+    		flex-basis: 0;
+		}
+	}
+
 	section, article {
 		&.special {
 			text-align: center;
