--- a/src/assets/scss/libs/_vars.scss
+++ b/src/assets/scss/libs/_vars.scss
@@ -26,8 +26,9 @@
 // Palette.
 	$palette: (
 		bg:					#fff,
-		fg:					#a2a2a2,
-		fg-bold:			#787878,
+		fg:					#767676,
+		// fg-bold:			#767676,
+		fg-bold:			#595959,
 		fg-light:			#b2b2b2,
 		border:				#efefef,
 		border-bg:			#f7f7f7,
@@ -35,7 +36,7 @@
 		border2-bg:			#e7e7e7,
 
 		accent1: (
-			bg:				#49bf9d,
+			bg:				#32836c,
 			fg:				mix(#49bf9d, #ffffff, 25%),
 			fg-bold:		#ffffff,
 			fg-light:		mix(#49bf9d, #ffffff, 40%),
