--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -44,7 +44,7 @@ import { Image } from "@astrojs/image/components";
       <p class="my-4">
         One of hosts of{" "}
         <a
-          href="https://justjoin.it/sniadanie-z-programowaniem"
+          href="https://www.youtube.com/@SniadaniezProgramowaniem"
           target="_blank"
           class="cactus-link"
           title="Śniadanie z Programowaniem by JustJoin It"
