--- a/src/components/SocialList.astro
+++ b/src/components/SocialList.astro
@@ -66,27 +66,14 @@ import { SOCIAL_LINKS } from "@/data/constants";
 		<li>
 			<a
 				class='inline-block p-2 sm:hover:text-link'
-				href={SOCIAL_LINKS.instagram}
+				href={SOCIAL_LINKS.blueSky}
 				target='_blank'
 				rel='noopener noreferrer'
 			>
-				<svg
-					xmlns='http://www.w3.org/2000/svg'
-					class='icon icon-tabler icon-tabler-brand-instagram h-6 w-6'
-					viewBox='0 0 24 24'
-					stroke-width='1.5'
-					stroke='currentColor'
-					fill='none'
-					stroke-linecap='round'
-					stroke-linejoin='round'
-				>
-					<path stroke='none' d='M0 0h24v24H0z' fill='none'></path>
-					<path d='M4 4m0 4a4 4 0 0 1 4 -4h8a4 4 0 0 1 4 4v8a4 4 0 0 1 -4 4h-8a4 4 0 0 1 -4 -4z'
-					></path>
-					<path d='M12 12m-3 0a3 3 0 1 0 6 0a3 3 0 1 0 -6 0'></path>
-					<path d='M16.5 7.5l0 .01'></path>
+      <svg xmlns="http://www.w3.org/2000/svg" x-bind:width="size" x-bind:height="size" viewBox="0 0 24 24" fill="none" stroke="currentColor" x-bind:stroke-width="stroke" stroke-linecap="round" stroke-linejoin="round" width="24" height="24" stroke-width="2">
+        <path d="M6.335 5.144c-1.654 -1.199 -4.335 -2.127 -4.335 .826c0 .59 .35 4.953 .556 5.661c.713 2.463 3.13 2.75 5.444 2.369c-4.045 .665 -4.889 3.208 -2.667 5.41c1.03 1.018 1.913 1.59 2.667 1.59c2 0 3.134 -2.769 3.5 -3.5c.333 -.667 .5 -1.167 .5 -1.5c0 .333 .167 .833 .5 1.5c.366 .731 1.5 3.5 3.5 3.5c.754 0 1.637 -.571 2.667 -1.59c2.222 -2.203 1.378 -4.746 -2.667 -5.41c2.314 .38 4.73 .094 5.444 -2.369c.206 -.708 .556 -5.072 .556 -5.661c0 -2.953 -2.68 -2.025 -4.335 -.826c-2.293 1.662 -4.76 5.048 -5.665 6.856c-.905 -1.808 -3.372 -5.194 -5.665 -6.856z"></path>
 				</svg>
-				<span class='sr-only'>Instagram</span>
+				<span class='sr-only'>BlueSky</span>
 			</a>
 		</li>
 		<li>
