--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -54,6 +54,19 @@ import { Image } from "astro:assets";
 				breakfast show.
 			</p>
 
+			<p class='my-4'>
+				Part of the
+				<a
+					href='https://gabinet-wieczorynka.pl'
+					target='_blank'
+					class='cactus-link'
+					title='Gabinet Lekarski Wieczorynka'
+				>
+					Gabinet Lekarski Wieczorynka
+				</a>{" "}
+				team. We create small medical doctor's practice.
+			</p>
+
 			<p class='my-4'>TypeScript fan and promoter.<br />I talk about web and stuff.</p>
 		</div>
 	</section>
